Se agrega código JS para cargar las regiones/comunas en el formulario de registro

--- a/vistas/marcas.html
+++ b/vistas/marcas.html
@@ -43,7 +43,7 @@
     <section class="container container-principal mt-2" data-aos="fade-up" data-aos-duration="3000">
         <img src="../img/sections/workout.jpg" class="img-principal" alt="Imagen principal">
     </section>
-    <main class="mt-4" >
+    <main class="mt-4 mx-4">
         <section class="info-marca" data-aos="fade-up" data-aos-duration="1000">
             <div>
                 <h2>Optimum Nutrition</h2>
@@ -51,9 +51,9 @@
                     atletas profesionales y los entusiastas del gimnasio. Todo el mundo tiene objetivos: permítanos
                     ayudarle a alcanzar los suyos.</p>
             </div>
-            <img class="img_animate" src="../img/marcas-optimizado/gold-standart.jpg" alt="Optimum Nutrition">
+            <img class="img_animate mx-auto" src="../img/marcas-optimizado/gold-standart.jpg" alt="Optimum Nutrition">
         </section>
-        <section class="info-marca" data-aos="fade-up" data-aos-duration="1000">
+        <section class="info-marca reverse" data-aos="fade-up" data-aos-duration="1000">
             <div>
                 <h2>USN</h2>
                 <p>Durante más de 20 años, USN se ha comprometido a apoyar todos los estilos de vida de fitness a través
@@ -61,7 +61,7 @@
                     transparencia total en las etiquetas y potentes dosis de ingredientes clínicamente investigados,
                     patentados y con licencia.</p>
             </div>
-            <img src="../img/marcas-optimizado/usn.jpg" class="img_animate" alt="USN">
+            <img src="../img/marcas-optimizado/usn.jpg" class="img_animate mx-auto" alt="USN">
         </section>
         <section class="info-marca" data-aos="fade-up" data-aos-duration="1000">
             <div>
@@ -73,9 +73,9 @@
                     de los ingredientes clave que benefician a innumerables atletas, entusiastas del fitness y
                     culturistas.</p>
             </div>
-            <img src="../img/marcas-optimizado/muscletech.png" class="img_animate" alt="Muscletech">
+            <img src="../img/marcas-optimizado/muscletech.png" class="img_animate mx-auto" alt="Muscletech">
         </section>
-        <section class="info-marca" data-aos="fade-up" data-aos-duration="1000">
+        <section class="info-marca reverse" data-aos="fade-up" data-aos-duration="1000">
             <div>
                 <h2>Rule 1</h2>
                 <p><strong>QUALITY IS RULE 1</strong>.</p>
@@ -86,7 +86,7 @@
                     fabricación interna también nos permite ofrecer una nutrición de rendimiento incomparable a un
                     precio increíble.</p>
             </div>
-            <img src="../img/marcas-optimizado/rule-one.png" class="img_animate" alt="Rule 1">
+            <img src="../img/marcas-optimizado/rule-one.png" class="img_animate mx-auto" alt="Rule 1">
         </section>
         <section class="info-marca" data-aos="fade-up" data-aos-duration="1000">
             <div>
@@ -95,9 +95,9 @@
                     fórmulas avanzadas y efectivas para ayudar a aumentar los músculos, estimular la pérdida de peso,
                     mejorar la salud y el bienestar y aumentar el rendimiento.</p>
             </div>
-            <img src="../img/marcas-optimizado/ultimate-nutrition.png" class="img_animate" alt="Ultimate Nutrition">
+            <img src="../img/marcas-optimizado/ultimate-nutrition.png" class="img_animate mx-auto" alt="Ultimate Nutrition">
         </section>
-        <section class="info-marca" data-aos="fade-up" data-aos-duration="500">
+        <section class="info-marca reverse" data-aos="fade-up" data-aos-duration="500">
             <div>
                 <h2>Winkler Nutrition</h2>
                 <p>Somos una empresa nacional dedicada a desarrollar, elaborar y comercializar una amplia gama de
@@ -105,7 +105,7 @@
                     todo tipo de deportistas y/o personas que quieran llevar una vida sana, mejorar su rendimiento
                     deportivo e imagen.</p>
             </div>
-            <img src="../img/marcas-optimizado/winkler-nutrition2.png" class="img_animate" alt="Winkler Nutrition">
+            <img src="../img/marcas-optimizado/winkler-nutrition2.png" class="img_animate mx-auto" alt="Winkler Nutrition">
         </section>
     </main>
 
@@ -139,10 +139,10 @@
                         <p class="text-left">Si eres una marca que necesita ser promocionada, contáctanos al correo:
                             promocion.correo@gmail.com</p>
                     </div>
-                    <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
+                    <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4 text-left">
                         <h6 class="text-uppercase fw-bold mb-4 texto-nav-footer">Contacto</h6>
                         <p><i class="fas fa-home me-3"></i> Pucón, Chile</p>
-                        <p><i class="fas fa-envelope me-3"></i>correo@gmail.com</p>
+                        <p><i class="fas fa-envelope me-3"></i> correo@gmail.com</p>
                         <p><i class="fas fa-phone me-3"></i> + 569 87654321</p>
                     </div>
                 </div>
