--- a/vistas/registro.html
+++ b/vistas/registro.html
@@ -88,6 +88,32 @@
                 </div>
                 
             </form>
+            <aside>
+                <h5>Encuéntranos en nuestras redes sociales</h5>
+                <ul class="social-icons">
+                    <li>
+                        <a href="#" class="facebook"><i class="fab fa-facebook"></i> Facebook </a>
+                    </li>
+                    <li>
+                        <a href="#" class="twitter"><i class="fab fa-twitter"></i> Twitter </a>
+                    </li>
+                    <li>
+                        <a href="#" class="instagram"><i class="fab fa-instagram"></i> Instagram </a>
+                    </li>
+                    <li>
+                        <a href="#" class="github"><i class="fab fa-github"></i> GitHub </a>
+                    </li>
+                    <li>
+                        <a href="#" class="youtube"><i class="fab fa-youtube"></i> Youtube </a>
+                    </li>
+                    <li>
+                        <a href="#" class="linkedin"><i class="fab fa-linkedin"></i> LinkedIn </a>
+                    </li>
+                    <li>
+                        <a href="#" class="google"><i class="fab fa-google"></i> Google </a>
+                    </li>
+                  </ul>
+            </aside>
         </section>
     </main>
     <footer class="text-center text-lg-start text-muted bg-nav-footer">
