--- a/vistas/registro.html
+++ b/vistas/registro.html
@@ -22,7 +22,7 @@
     <link rel="stylesheet" href="../css/estilos.css">
 </head>
 
-<body>
+<body id="view_registro">
     <nav class="navbar">
         <a href="../index.html" class="titulo-nav link-item">
             <h2>VF</h2>
@@ -47,11 +47,11 @@
             <form action="#">
                 <div class="form-group my-2">
                     <label for="nombre">Nombre Completo</label>
-                    <input name="nombre" type="text" class="form-control" placeholder="Ingresa tu nombre ...">
+                    <input name="nombre" type="text" class="form-control" placeholder="Ingresa tu nombre ..." required>
                 </div>
                 <div class="form-group my-2">
                     <label for="telefono">Teléfono</label>
-                    <input name="telefono" type="text" class="form-control" placeholder="Ingresa tu número de contacto ...">
+                    <input name="telefono" type="text" class="form-control" placeholder="Ingresa tu número de contacto ..." required>
                 </div>
                 <div class="form-group my-2">
                     <label for="regiones">Región</label>
@@ -67,16 +67,16 @@
                 </div>
                 <div class="form-group my-2">
                     <label for="direccion">Dirección</label>
-                    <input name="direccion" type="text" class="form-control" placeholder="Ingresa tu dirección ... Ej: Mi Calle, #123">
+                    <input name="direccion" type="text" class="form-control" placeholder="Ingresa tu dirección ... Ej: Mi Calle, #123" required>
                 </div>
                 <div class="form-group my-2">
                     <label for="correo">Correo Electrónico</label>
-                    <input name="correo" type="email" class="form-control" placeholder="Ingresa tu correo ...">
+                    <input name="correo" type="email" class="form-control" placeholder="Ingresa tu correo ..." required>
                 </div>
                 <div class="form-group my-2">
                     <label for="clave">Contraseña</label>
                     <input name="clave" type="password" class="form-control"
-                        placeholder="Ingresa tu contraseña ...">
+                        placeholder="Ingresa tu contraseña ..." required>
                 </div>
                 <div class="form-group my-2">
                     <label for="reclave">Confirmar Contraseña</label>
