Se cambian divs por article

--- a/vistas/productos.html
+++ b/vistas/productos.html
@@ -43,23 +43,23 @@
     <main class="container my-4">
         <h4>Todos los productos</h4>
         <section class="contenedor-articulos my-3">
-            <div class="articulo">
+            <article class="articulo">
                 <img src="../img/suplementos-optimizados/proteina-usn.jpg" alt="Proteina USN" class="img_animate">
                 <div class="articulo-contenido">
                     <h5>Proteina USN</h5>
                     <p>$49.990</p>
                     <button class="articulo-boton">Comprar</button>
                 </div>
-            </div>
-            <div class="articulo">
+            </article>
+            <article class="articulo">
                 <img class="img img_animate" src="../img/suplementos-optimizados/creatina-usn.jpg" alt="Creatina USN">
                 <div class="articulo-contenido">
                     <h5>Creatina USN 60 servicios</h5>
                     <p>$31.000</p>
                     <button class="articulo-boton">Comprar</button>
                 </div>
-            </div>
-            <div class="articulo">
+            </article>
+            <article class="articulo">
                 <img class="img img_animate" src="../img/suplementos-optimizados/pre-entreno-w-nutrition.jpg"
                     alt="Pre-Workout Winkler Nutrition">
                 <div class="articulo-contenido">
@@ -67,8 +67,8 @@
                     <p>$21.000</p>
                     <button class="articulo-boton">Comprar</button>
                 </div>
-            </div>
-            <div class="articulo">
+            </article>
+            <article class="articulo">
                 <img class="img img_animate" src="../img/suplementos-optimizados/bcaa-universal.jpg"
                     alt="BCAAs Universal">
                 <div class="articulo-contenido">
@@ -76,64 +76,64 @@
                     <p>$49.000</p>
                     <button class="articulo-boton">Comprar</button>
                 </div>
-            </div>
-            <div class="articulo">
+            </article>
+            <article class="articulo">
                 <img class="img img_animate" src="../img/suplementos-optimizados/nitrotech.jpg" alt="Nitrotech">
                 <div class="articulo-contenido">
                     <h5>Nitrotech</h5>
                     <p>$59.000</p>
                     <button class="articulo-boton">Comprar</button>
                 </div>
-            </div>
-            <div class="articulo">
+            </article>
+            <article class="articulo">
                 <img class="img img_animate" src="../img/suplementos-optimizados/bpi.jpg" alt="Protina BPI">
                 <div class="articulo-contenido">
                     <h5>Proteina BPI</h5>
                     <p>$42.490</p>
                     <button class="articulo-boton">Comprar</button>
                 </div>
-            </div>
-            <div class="articulo">
+            </article>
+            <article class="articulo">
                 <img class="img img_animate" src="../img/suplementos-optimizados/pro-win.jpg" alt="Pro-Win">
                 <div class="articulo-contenido">
                     <h5>Pro-Win W Nutrition</h5>
                     <p>$59.000</p>
                     <button class="articulo-boton">Comprar</button>
                 </div>
-            </div>
-            <div class="articulo">
+            </article>
+            <article class="articulo">
                 <img class="img img_animate" src="../img/suplementos-optimizados/syntha6.jpg" alt="Proteina Syntha 6">
                 <div class="articulo-contenido">
                     <h5>Syntha 6</h5>
                     <p>$61.000</p>
                     <button class="articulo-boton">Comprar</button>
                 </div>
-            </div>
-            <div class="articulo">
+            </article>
+            <article class="articulo">
                 <img class="img img_animate" src="../img/suplementos-optimizados/iso100.jpg" alt="ISO 100">
                 <div class="articulo-contenido">
                     <h5 class="card-title">ISO 100</h5>
                     <p>$49.000</p>
                     <button class="articulo-boton">Comprar</button>
                 </div>
-            </div>
-            <div class="articulo">
+            </article>
+            <article class="articulo">
                 <img class="img img_animate" src="../img/suplementos-optimizados/l-arginina.jpg" alt="L-Arginina">
                 <div class="articulo-contenido">
                     <h5>L-Arginina</h5>
                     <p>$31.000</p>
                     <button class="articulo-boton">Comprar</button>
                 </div>
-            </div>
-            <div class="articulo">
+            </article>
+            <article class="articulo">
                 <img class="img img_animate" src="../img/suplementos-optimizados/zma.png" alt="ZMA">
                 <div class="articulo-contenido">
                     <h5>ZMA</h5>
                     <p>$21.000</p>
                     <button class="articulo-boton">Comprar</button>
                 </div>
-            </div>
-            <div class="articulo">
+            </article>
+            <article class="articulo">
                 <img class="img img_animate" src="../img/suplementos-optimizados/creatina-platinum.jpg"
                     alt="Creatina platinum">
                 <div class="articulo-contenido">
@@ -141,7 +141,83 @@
                     <p>$34.500</p>
                     <button class="articulo-boton">Comprar</button>
                 </div>
-            </div>
+            </article>
+
+            <article class="articulo">
+                <img src="../img/suplementos-optimizados/proteina-usn.jpg" alt="Proteina USN" class="img_animate">
+                <div class="articulo-contenido">
+                    <h5>Proteina USN</h5>
+                    <p>$49.990</p>
+                    <button class="articulo-boton">Comprar</button>
+                </div>
+            </article>
+            <article class="articulo">
+                <img class="img img_animate" src="../img/suplementos-optimizados/creatina-usn.jpg" alt="Creatina USN">
+                <div class="articulo-contenido">
+                    <h5>Creatina USN 60 servicios</h5>
+                    <p>$31.000</p>
+                    <button class="articulo-boton">Comprar</button>
+                </div>
+            </article>
+            <article class="articulo">
+                <img class="img img_animate" src="../img/suplementos-optimizados/pre-entreno-w-nutrition.jpg"
+                    alt="Pre-Workout Winkler Nutrition">
+                <div class="articulo-contenido">
+                    <h5>Pre-Workout W Nutrition</h5>
+                    <p>$21.000</p>
+                    <button class="articulo-boton">Comprar</button>
+                </div>
+            </article>
+            <article class="articulo">
+                <img class="img img_animate" src="../img/suplementos-optimizados/bcaa-universal.jpg"
+                    alt="BCAAs Universal">
+                <div class="articulo-contenido">
+                    <h5>BCAAs Universal</h5>
+                    <p>$49.000</p>
+                    <button class="articulo-boton">Comprar</button>
+                </div>
+            </article>
+            <article class="articulo">
+                <img class="img img_animate" src="../img/suplementos-optimizados/nitrotech.jpg" alt="Nitrotech">
+                <div class="articulo-contenido">
+                    <h5>Nitrotech</h5>
+                    <p>$59.000</p>
+                    <button class="articulo-boton">Comprar</button>
+                </div>
+            </article>
+            <article class="articulo">
+                <img class="img img_animate" src="../img/suplementos-optimizados/bpi.jpg" alt="Protina BPI">
+                <div class="articulo-contenido">
+                    <h5>Proteina BPI</h5>
+                    <p>$42.490</p>
+                    <button class="articulo-boton">Comprar</button>
+                </div>
+            </article>
+            <article class="articulo">
+                <img class="img img_animate" src="../img/suplementos-optimizados/pro-win.jpg" alt="Pro-Win">
+                <div class="articulo-contenido">
+                    <h5>Pro-Win W Nutrition</h5>
+                    <p>$59.000</p>
+                    <button class="articulo-boton">Comprar</button>
+                </div>
+            </article>
+            <article class="articulo">
+                <img class="img img_animate" src="../img/suplementos-optimizados/syntha6.jpg" alt="Proteina Syntha 6">
+                <div class="articulo-contenido">
+                    <h5>Syntha 6</h5>
+                    <p>$61.000</p>
+                    <button class="articulo-boton">Comprar</button>
+                </div>
+            </article>
+            <article class="articulo">
+                <img class="img img_animate" src="../img/suplementos-optimizados/iso100.jpg" alt="ISO 100">
+                <div class="articulo-contenido">
+                    <h5 class="card-title">ISO 100</h5>
+                    <p>$49.000</p>
+                    <button class="articulo-boton">Comprar</button>
+                </div>
+            </article>
+            
         </section>
 
     </main>
@@ -165,7 +241,7 @@
                 <div class="row mt-3">
                     <div class="col-md-2 col-lg-2 col-xl-5 mx mb-4 text-left">
                         <h6 class="text-uppercase fw-bold mb-4 texto-nav-footer"> ¿Quiénes Somos? </h6>
-                        <p>VF Suplementos nace el 2020 en Pucón, en un comienzo con la venta exclusiva de suplementos de 
+                        <p>VF Suplementos nace el 2020 en Pucón, en un comienzo con la venta exclusiva de suplementos de
                             marcas chilenas, para luego expandir la gama de productos a las mejores marcas
                             internacionales. Hoy en día, somos importadores directos y representantes exclusivos de
                             marcas líderes en suplementos.</p>
