--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
         </section>
         <section class="contenedor-articulos">
-            <div class="aviso" data-aos="fade-up" data-aos-duration="2000">
+            <article class="aviso" data-aos="fade-up" data-aos-duration="2000">
                 <div class="aviso-image">
                     <img src="img/sections/aviso-importante.jpg" alt="Recomendaciones" class="img_animate">
                 </div>
@@ -86,8 +86,8 @@
                     <h3>Recomendaciones</h3>
                     <p>Si estás comenzando en el mundo de la suplementación, te recomendamos que te orientes primero según tu objetivo y tus requerimientos nutricionales!</p>
                 </div>
-            </div>
-            <div class="aviso" data-aos="fade-up" data-aos-duration="2000">
+            </article>
+            <article class="aviso" data-aos="fade-up" data-aos-duration="2000">
                 <div class="aviso-image">
                     <img src="img/sections/aviso-envios.jpg" alt="Envios y entregas" class="img_animate">
                 </div>
@@ -95,14 +95,14 @@
                     <h3>Envios y Entregas</h3>
                     <p>Realizamos envíos a todo Chile. Los días lunes y miércoles a las 15:00 entregamos los pedidos a la empresa transportista. Si cae feriado, el pedido se entregará el día siguiente. Para retiros, acércate al local ubicado en el Gran Hotel Pucón con la boleta que recibiste en tu correo. </p>
                 </div>
-            </div>
+            </article>
         </section>
         <section class="section-absoluto">
             <div class="absoluto-layer layer-bg"></div>
-            <div class="absoluto-layer layer-contenido">
+            <aside class="absoluto-layer layer-contenido">
                 <h1>Compleméntalo con ejercicio</h1>
                 <p class="texto-sombreado">Recuerda que un suplemento NO funciona por arte de magia!</p>
-            </div>
+            </aside>
         </section>
         <section class="container text-center p-2">
             <h4 class="mt-3">Productos más vendidos</h4>
@@ -156,27 +156,27 @@
             <h4 class="texto-subrayado mt-5">Nuestras Marcas</h4>
             <div class="carrusel centrar-h">
                 <div class="carrusel-container">
-                    <div class="carrusel-item">
+                    <article class="carrusel-item">
                         <img src="img/marcas-optimizado/gold-standart.jpg" class="img" alt="Optimum Nutrition">
-                    </div>
-                    <div class="carrusel-item">
+                    </article>
+                    <article class="carrusel-item">
                         <img src="img/marcas-optimizado/hexacore.jpg" class="img" alt="Hexacore">
-                    </div>
-                    <div class="carrusel-item">
+                    </article>
+                    <article class="carrusel-item">
                         <img src="img/marcas-optimizado/usn.jpg" class="img" alt="USN">
-                    </div>
-                    <div class="carrusel-item">
+                    </article>
+                    <article class="carrusel-item">
                         <img src="img/marcas-optimizado/muscletech.png" class="img" alt="Muscletech">
-                    </div>
-                    <div class="carrusel-item">
+                    </article>
+                    <article class="carrusel-item">
                         <img src="img/marcas-optimizado/rule-one.png" class="img" alt="Rule 1">
-                    </div>
-                    <div class="carrusel-item">
+                    </article>
+                    <article class="carrusel-item">
                         <img src="img/marcas-optimizado/ultimate-nutrition.png" class="img" alt="Ultimate Nutrition">
-                    </div>
-                    <div class="carrusel-item">
+                    </article>
+                    <article class="carrusel-item">
                         <img src="img/marcas-optimizado/winkler-nutrition.png" class="img" alt="Winkler Nutrition">
-                    </div>
+                    </article>
                 </div>
             </div>
         </section>
